# uv-workspace-dynamic-versioning

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  issue_add_pre_commit.json  issue_streamline_dependencies.json  mkdocs.yml  patch_main.py  pr_streamline_dependencies.json  pyproject.toml  release_issue.json  release_pr.json
.github/workflows/: ci-cd.yml  ci.yml  publish.yml
.memory/: AGENTS.md  main.md  state.yaml
.memory/branches/ci-cd-workflow/: commits.md
.memory/branches/main/: commits.md
.memory/branches/refactor-v2/: commits.md  log.md
.pi/: settings.json
docs/: BACKEND_SUPPORT.md  BEST_PRACTICES.md  api.md  configuration.md  contributing_link.md  index.md  usage.md
examples/: README.md
examples/01-basic-hatchling/: README.md  pyproject.toml
examples/01-basic-hatchling/src/example_basic/: __init__.py
examples/02-workspace/: README.md  pyproject.toml
examples/03-jinja-templating/: README.md  pyproject.toml
examples/03-jinja-templating/src/example_jinja/: __init__.py
examples/04-dynamic-dependencies/: README.md  pyproject.toml
examples/04-dynamic-dependencies/src/example_deps/: __init__.py
examples/05-custom-format/: README.md  pyproject.toml
examples/05-custom-format/src/example_custom/: __init__.py
examples/06-hybrid-workspace/: README.md  pyproject.toml
scripts/: validate_build.py
src/uv_workspace_dynamic_versioning/: __init__.py  hooks.py  metadata_hook.py  plugin.py  schemas.py  template.py  version_source.py
tests/: test_docker_override.py  test_env_bypass.py  test_full_coverage.py  test_metadata.py  test_plugin.py  test_vcs.py
