[project]
name = "uv-workspace-dynamic-versioning"
dynamic = ["version"]
description = "A dynamic version source plugin for uv workspaces."
readme = "README.md"
authors = [
    { name = "Indivar Mishra", email = "indimishra@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "hatchling>=1.0.0",
    "dunamai>=1.0.0",
    "tomlkit>=0.11.0",
    "jinja2>=3.1.5"
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-minify-plugin>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-mock",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/indiVar0508/uv-workspace-dynamic-versioning"

[project.entry-points.hatch]
uv-workspace-dynamic-versioning = "uv_workspace_dynamic_versioning.hooks"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"