[project]
name = "uv-workspace-dynamic-versioning"
dynamic = ["version"]
description = "A dynamic version source plugin for uv workspaces."
readme = "README.md"
authors = [
    { name = "Indivar Mishra", email = "indimishra@gmail.com" },
    { name = "Pi", email = "pi@pi.dev" }
]
requires-python = ">=3.8"
dependencies = [
    "hatchling>=1.0.0",
    "dunamai>=1.0.0",
    "tomlkit>=0.11.0",
    "jinja2>=3.1.5"
]

[project.optional-dependencies]
docs = [
    "mkdocs-material[recommended]>=9.5.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-minify-plugin>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-glightbox>=0.3.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-mock",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/indiVar0508/uv-workspace-dynamic-versioning"

[project.entry-points.hatch]
uv-workspace-dynamic-versioning = "uv_workspace_dynamic_versioning.hooks"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TID"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
