[project]
name = "uv-workspace-dynamic-versioning"
dynamic = ["version"]
description = "A dynamic version source plugin for uv workspaces."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Indivar Mishra", email = "indimishra@gmail.com" },
    { name = "Pi", email = "pi@pi.dev" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["uv", "workspace", "hatch", "dynamic-versioning", "build-backend"]
dependencies = [
    "hatchling==1.27.0",
    "dunamai==1.26.0",
    "tomlkit==0.13.3",
    "jinja2==3.1.6",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock",
    "pytest-cov",
    "ruff",
    "bandit",
]
docs = [
    "mkdocs-material[recommended]>=9.5.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-minify-plugin>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-glightbox>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/indiVar0508/uv-workspace-dynamic-versioning"
Documentation = "https://github.com/indiVar0508/uv-workspace-dynamic-versioning"
Repository = "https://github.com/indiVar0508/uv-workspace-dynamic-versioning"
Issues = "https://github.com/indiVar0508/uv-workspace-dynamic-versioning/issues"

[project.entry-points.hatch]
uv-workspace-dynamic-versioning = "uv_workspace_dynamic_versioning.hooks"

[build-system]
requires = ["hatchling==1.27.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TID"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
