[project]
name = "example-basic"
dynamic = ["version"]
description = "Basic example of uv-workspace-dynamic-versioning with hatchling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling", "uv-workspace-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-workspace-dynamic-versioning"
